--- a/psico-artaza-web/package.json
+++ b/psico-artaza-web/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
     "@popperjs/core": "^2.11.8",
     "@types/react": "^18.3.12",
